--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -22,11 +22,7 @@ jobs:
         IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNT }}
         REGION_NUM: ${{ secrets.REGION_NUM }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud login <<EOF
-        $IBM_ACCOUNT
-        $REGION_NUM
-        no
-        EOF
+        ./IBM_Cloud_CLI/ibmcloud login $IBM_ACCOUNT -r $REGION_NUM -c 1
     - name: Target IBM Cloud
       env:
         RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
