--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -23,7 +23,7 @@ jobs:
         IBM_ACCOUNT_PASS: ${{ secrets.IBM_ACCOUNT_PASS }}
         REGION_NUM: ${{ secrets.REGION_NUM }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud login -u $IBM_ACCOUNT -p IBM_ACCOUNT_PASS -r $REGION_NUM -c 1
+        ./IBM_Cloud_CLI/ibmcloud login -u $IBM_ACCOUNT -p $IBM_ACCOUNT_PASS -r $REGION_NUM -c 1
     - name: Target IBM Cloud
       env:
         RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
